css/common/home.css
.site_navigation {
    width: 100%;
    height: 55px;
    position: fixed;
    top: 0;
    left: 0;
    padding-left: 30px;
    padding-right: 30px;
    padding-top: 15px;
    z-index: 500;
    background: rgba(0, 0, 0, 0.3);
}

.logo {
    color: white;
    font-size: 1.3em;
    float: left;
    line-height: 1.3;
}

.navigation_option {
    margin-left: 10px;
    margin-right: 10px;
    color: #BDC3C7;
    transition: .25s;
}

.room-list-tools {
    padding: 15px !important;
}

.navigation_option:hover {
    color: #fff;
}

.room-option {
    margin-top: 22px;
    margin-bottom: 15px;
    display: block;
}

.room-option > .fa {
    font-size: 0.9em;
    margin-right: 10px;
}
.room-option-green {
    color: #1ABC9C;
}

.room-option-orange {
    color: #E67E22;
}

.room-option-blue {
    color: #3498DB;
}

div[role="navigation"] {
    padding-left: 20px;
    float: left;
}

.active {
    color: #ECF0F1;
    border-bottom: 2px solid #BDC3C7;
}

.btn-info {
    color: #fff;
    background-color: #3498db;
}

.btn {
    padding: 10px 15px;
    font-size: 15px;
    font-weight: 400;
    line-height: 1.4;
    border: none;
    border-radius: 4px;
    -webkit-transition: border .25s linear,color .25s linear,background-color .25s linear;
    transition: border .25s linear,color .25s linear,background-color .25s linear;
    -webkit-font-smoothing: subpixel-antialiased;
}

#login-menu {
    float: right;
}

#login-menu > a {
    color: #27AE60;
    transition: .25s;
}

#login-menu > a:hover {
    color: #1ABC9C;
    text-decoration: none;
}

#room_list {
    z-index: 200;
    padding-top: 90px;
    color: #ffffff;
}

.room-users-wrapper {
    float: right;
    padding-right: 15px;
}

.room-users-wrapper > .fa {
    font-size: 0.8em;
    margin-left: 5px;
}

.room-card > img {
    width: 100%;
    padding-top: 5px;
}

.room-name {
    float: left;
    padding-left: 15px;
}

.no-song {
    line-height: 2.4;
    color: #808080;
    padding-left: 15px;
}

.panel-body {
    padding: 0;
    padding-top: 5px;
}

.panel-default {
    border: 0;
}

.footer_option {
    float: right;
}

.panel {
    background-color: rgba(52, 73, 94, 0.8);
    color: #ECF0F1;
}

.panel-dark {
    background-color: rgba(52, 73, 94, 1);
    color: #ECF0F1;
}

.panel-footer {
    background-color: rgba(52, 73, 94, 0.8);
    color: #ECF0F1;
    border: 0;
    height: 60px;
}

.panel-footer > span {
    font-size: 0.8em;
    line-height: 1.4;
}

.song-name {
    float: left;
    color: #ECF0F1;
}

.song-artist {
    float: left;
    color: #BDC3C7;
    padding-top: 20px;
    left: 30px;
    position: absolute;
}

#my_music {
    z-index: 200;
    padding-top: 90px;
}

#now_playing_placeholder {
    color: #1bc5a3;
    font-size: 1.3em;
    padding-left: 30px;
}

#create_room {
    z-index: 200;
    margin-top: 90px;
    color: #f5f5f5;
}

.create-content {
    color: white;
}

@media(max-width: 990px) {
    .room-option {
        margin-top: 7px;
        margin-bottom: 5px;
    }
}

@media(max-width: 768px) {
    .logo {
        display: none;
    }

    div[role="navigation"] {
        padding-left: 0;
    }

    #login-full {
        display: none;
    }

    #now_playing_placeholder {
        padding-left: 10px;
        font-size: 1em;
    }
}

@media(max-width: 500px) {
    .site_navigation {
        padding-left: 10px;
        padding-right: 20px;
    }

    .navigation_option {
        margin-left: 5px;
        margin-right: 5px;
    }

    #now-playing-full {
        display: none;
    }
}

